2006-01-30  Rodrigo Moya <rodrigo@novell.com>

	* actions/acme.h:
	* gnome-keybinding-properties.c: reverted commit from 2006-01-11.

2006-01-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c: (accel_edited_callback):
	Refuse to bind letter keys without a modifier (Closes: #86956)

2006-01-11  Sebastien Bacher  <seb128@debian.org>

	* gnome-keybinding-properties.c:
	drop the keysym/keycode binding code, it's an hack and 
	doesn't work fine, patch by Bastien Nocera <hadess@hadess.net>
	(Closes: #133815)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* eggcellrendererkeys.c: (egg_cell_renderer_keys_set_accelerator):
	Remove some unused code.
	* gnome-keybinding-properties.c: (should_show_key): Mark some
	arrays static.

2005-02-08  Sebastien Bacher  <seb128@debian.org>

	* eggcellrendererkeys.c: (egg_cell_renderer_keys_start_editing):
	patch by Kjartan Maraas <kmaraas@gnome.org>, some code cleanups
        (Closes: #166267).

2005-01-13  Sebastien Bacher  <seb128@debian.org>

	* gnome-keybinding-properties.c: (start_editing_kb_cb),
	(setup_dialog): edit the keybinding when "enter" is pressed 
	(Closes: #127992).

2005-01-02  Sebastien Bacher  <seb128@debian.org>

	* gnome-keybinding-properties.glade:
	patch from Heikki Paajanen <hepaajan@iki.fi> (based on the patch
	from Andrew Johnson <acjgenius@earthlink.net>) 
	to not set "close" as the default button (Closes: #98202).

2004-11-30  Bastien Nocera  <hadess@hadess.net>

	* eggcellrendererkeys.c: (grab_key_callback): Patch from
	Michal Bukovjan <bukovjan@mbox.dkm.cz> to handle backspace in multi-
	layout setups correctly (Closes: #154492)

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install .desktop file in $(datadir)/applications
	
	* keybinding.desktop.in: add OnlyShowIn=GNOME;

2004-10-17  Vincent Untz  <vincent@vuntz.net>

	* gnome-keybinding-properties.c: add the keybinding to launch a
	terminal

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1
