@@ -1,3 +1,10 @@
+2006-07-27  Gary Coady <gary@lyranthe.org>
+
+	Fixes #333576
+
+	* gnome-keybinding-properties.c (accel_edited_callback): don't assume
+	defines are contiguous.
+
 2006-01-30  Rodrigo Moya <rodrigo@novell.com>
 
 	* actions/acme.h:
